parallel dataset done

--- a/dataset/datapreprocessing.ipynb
+++ b/dataset/datapreprocessing.ipynb
@@ -9,7 +9,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 5,
+         "execution_count": 2,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -21,7 +21,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": 3,
          "metadata": {},
          "outputs": [
             {
@@ -41,7 +41,7 @@
                      "      dtype='object')"
                   ]
                },
-               "execution_count": 6,
+               "execution_count": 3,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -61,7 +61,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 7,
+         "execution_count": 4,
          "metadata": {},
          "outputs": [
             {
@@ -163,58 +163,58 @@
                      "      <td>...</td>\n",
                      "    </tr>\n",
                      "    <tr>\n",
-                     "      <th>709894</th>\n",
-                     "      <td>5163549</td>\n",
-                     "      <td>Burnsie: I wish you all the best, but despite ...</td>\n",
-                     "      <td>train</td>\n",
-                     "      <td>54</td>\n",
-                     "      <td>5163479.0</td>\n",
-                     "      <td>328802</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "    </tr>\n",
-                     "    <tr>\n",
-                     "      <th>709893</th>\n",
-                     "      <td>5687703</td>\n",
-                     "      <td>Yup.</td>\n",
-                     "      <td>train</td>\n",
-                     "      <td>43</td>\n",
-                     "      <td>5687001.0</td>\n",
-                     "      <td>360936</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "    </tr>\n",
-                     "    <tr>\n",
-                     "      <th>709892</th>\n",
-                     "      <td>5121964</td>\n",
-                     "      <td>ANOTHER moped rider speeding AND not wearing a...</td>\n",
+                     "      <th>1999483</th>\n",
+                     "      <td>6248884</td>\n",
+                     "      <td>Most Illegal Aliens strongly believe in Racist...</td>\n",
                      "      <td>train</td>\n",
                      "      <td>55</td>\n",
-                     "      <td>NaN</td>\n",
-                     "      <td>326223</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "    </tr>\n",
-                     "    <tr>\n",
-                     "      <th>709891</th>\n",
-                     "      <td>5317323</td>\n",
-                     "      <td>Scheer was born in Ottawa, Ontario, 1979\\n-stu...</td>\n",
-                     "      <td>train</td>\n",
-                     "      <td>54</td>\n",
-                     "      <td>NaN</td>\n",
-                     "      <td>338336</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "      <td>0.000000</td>\n",
-                     "    </tr>\n",
-                     "    <tr>\n",
-                     "      <th>1999515</th>\n",
-                     "      <td>4984105</td>\n",
-                     "      <td>You know the Trump fanatics are trolling the G...</td>\n",
-                     "      <td>train</td>\n",
-                     "      <td>54</td>\n",
-                     "      <td>807615.0</td>\n",
-                     "      <td>156960</td>\n",
+                     "      <td>6248837.0</td>\n",
+                     "      <td>394615</td>\n",
                      "      <td>0.400000</td>\n",
+                     "      <td>0.000000</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>56</th>\n",
+                     "      <td>5276309</td>\n",
+                     "      <td>The parallels between the ANC and the Sicilian...</td>\n",
+                     "      <td>train</td>\n",
+                     "      <td>100</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>335763</td>\n",
+                     "      <td>0.833333</td>\n",
+                     "      <td>0.000000</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>1999491</th>\n",
+                     "      <td>5950800</td>\n",
+                     "      <td>Now here is an example of what I consider to b...</td>\n",
+                     "      <td>train</td>\n",
+                     "      <td>55</td>\n",
+                     "      <td>5950675.0</td>\n",
+                     "      <td>377568</td>\n",
+                     "      <td>0.400000</td>\n",
+                     "      <td>0.000000</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>59</th>\n",
+                     "      <td>7175529</td>\n",
+                     "      <td>I have, Don Nom De Lantinos PoliticallyIncorre...</td>\n",
+                     "      <td>test</td>\n",
+                     "      <td>13</td>\n",
+                     "      <td>471117.0</td>\n",
+                     "      <td>145656</td>\n",
+                     "      <td>0.090909</td>\n",
+                     "      <td>0.000000</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>1499636</th>\n",
+                     "      <td>1043803</td>\n",
+                     "      <td>On a scale of one to one thousand the Herzberg...</td>\n",
+                     "      <td>train</td>\n",
+                     "      <td>54</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>166701</td>\n",
+                     "      <td>0.166667</td>\n",
                      "      <td>0.000000</td>\n",
                      "    </tr>\n",
                      "  </tbody>\n",
@@ -230,11 +230,11 @@
                      "461912   6180251  DOGS----\\nEAT\\nSHIT\\nSLEEP\\nBARK\\n\\nNIGERS\\nEA...  train   \n",
                      "528865   5754942  BURN THIS DOG RAPING WHITE NIGER ALIVE\\nTIME f...  train   \n",
                      "...          ...                                                ...    ...   \n",
-                     "709894   5163549  Burnsie: I wish you all the best, but despite ...  train   \n",
-                     "709893   5687703                                               Yup.  train   \n",
-                     "709892   5121964  ANOTHER moped rider speeding AND not wearing a...  train   \n",
-                     "709891   5317323  Scheer was born in Ottawa, Ontario, 1979\\n-stu...  train   \n",
-                     "1999515  4984105  You know the Trump fanatics are trolling the G...  train   \n",
+                     "1999483  6248884  Most Illegal Aliens strongly believe in Racist...  train   \n",
+                     "56       5276309  The parallels between the ANC and the Sicilian...  train   \n",
+                     "1999491  5950800  Now here is an example of what I consider to b...  train   \n",
+                     "59       7175529  I have, Don Nom De Lantinos PoliticallyIncorre...   test   \n",
+                     "1499636  1043803  On a scale of one to one thousand the Herzberg...  train   \n",
                      "\n",
                      "         publication_id  parent_id  article_id  toxicity  severe_toxicity  \n",
                      "596097               21        NaN      368010  1.000000         1.000000  \n",
@@ -243,16 +243,16 @@
                      "461912               21  6179746.0      390746  0.990396         0.591236  \n",
                      "528865              105        NaN      365110  0.973936         0.569070  \n",
                      "...                 ...        ...         ...       ...              ...  \n",
-                     "709894               54  5163479.0      328802  0.000000         0.000000  \n",
-                     "709893               43  5687001.0      360936  0.000000         0.000000  \n",
-                     "709892               55        NaN      326223  0.000000         0.000000  \n",
-                     "709891               54        NaN      338336  0.000000         0.000000  \n",
-                     "1999515              54   807615.0      156960  0.400000         0.000000  \n",
+                     "1999483              55  6248837.0      394615  0.400000         0.000000  \n",
+                     "56                  100        NaN      335763  0.833333         0.000000  \n",
+                     "1999491              55  5950675.0      377568  0.400000         0.000000  \n",
+                     "59                   13   471117.0      145656  0.090909         0.000000  \n",
+                     "1499636              54        NaN      166701  0.166667         0.000000  \n",
                      "\n",
                      "[1999516 rows x 8 columns]"
                   ]
                },
-               "execution_count": 7,
+               "execution_count": 4,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -562,7 +562,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.11.9"
+         "version": "3.9.18"
       }
    },
    "nbformat": 4,
