fixed ui and placed temporary seq model

--- a/dataset/paradetox.ipynb
+++ b/dataset/paradetox.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "## 1. Generating the parallel dataset from Jigsaw\n",
-    "We use `balanced_data.csv` as it is a smaller dataset"
+    "We use `cleaned_balanced_data.csv` as it is a smaller dataset"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('balanced_data.csv')\n",
+    "df = pd.read_csv('cleaned_balanced_data.csv')\n",
     "target_columns = ['comment_text', 'toxicity', 'severe_toxicity']"
    ]
   },
