--- a/dataset/kcbert2.ipynb
+++ b/dataset/kcbert2.ipynb
@@ -877,10 +877,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from torch.optim import AdamW\n",
-    "# weight_decay = 0.01\n",
-    "# optimizer = AdamW(model.parameters(), lr=2e-5, weight_decay=weight_decay)\n",
-    "# batch_size = 32"
+    "from torch.optim import AdamW\n",
+    "weight_decay = 0.01\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5, weight_decay=weight_decay)\n",
+    "batch_size = 32"
    ]
   },
   {
@@ -889,19 +889,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_dataset = torch.utils.data.TensorDataset(\n",
-    "#     torch.tensor(train_encodings['input_ids']),\n",
-    "#     torch.tensor(train_encodings['attention_mask']),\n",
-    "#     torch.tensor(train_labels)\n",
-    "# )\n",
-    "# train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "train_dataset = torch.utils.data.TensorDataset(\n",
+    "    torch.tensor(train_encodings['input_ids']),\n",
+    "    torch.tensor(train_encodings['attention_mask']),\n",
+    "    torch.tensor(train_labels)\n",
+    ")\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
-    "# val_dataset = torch.utils.data.TensorDataset(\n",
-    "#     torch.tensor(val_encodings['input_ids']),\n",
-    "#     torch.tensor(val_encodings['attention_mask']),\n",
-    "#     torch.tensor(val_labels)\n",
-    "# )\n",
-    "# val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
+    "val_dataset = torch.utils.data.TensorDataset(\n",
+    "    torch.tensor(val_encodings['input_ids']),\n",
+    "    torch.tensor(val_encodings['attention_mask']),\n",
+    "    torch.tensor(val_labels)\n",
+    ")\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
    ]
   },
   {
@@ -910,14 +910,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_epochs = 10\n",
-    "# num_train_steps = len(train_loader) * num_epochs\n",
+    "num_epochs = 10\n",
+    "num_train_steps = len(train_loader) * num_epochs\n",
     "\n",
-    "# scheduler = get_linear_schedule_with_warmup(\n",
-    "#     optimiser,\n",
-    "#     num_warmup_steps=0,\n",
-    "#     num_training_steps=num_train_steps\n",
-    "# )"
+    "scheduler = get_linear_schedule_with_warmup(\n",
+    "    optimiser,\n",
+    "    num_warmup_steps=0,\n",
+    "    num_training_steps=num_train_steps\n",
+    ")"
    ]
   },
   {
@@ -926,52 +926,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from tqdm import tqdm\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     model.train()\n",
-    "#     train_losses = 0.0\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    train_losses = 0.0\n",
     "    \n",
-    "#     for batch in tqdm(train_loader, desc=f\"Training Epoch {epoch+1}/{num_epochs}\", unit=\"batch\"):\n",
-    "#         input_ids = batch[0].to(device)\n",
-    "#         attention_mask = batch[1].to(device)\n",
-    "#         labels = batch[2].to(device)\n",
+    "    for batch in tqdm(train_loader, desc=f\"Training Epoch {epoch+1}/{num_epochs}\", unit=\"batch\"):\n",
+    "        input_ids = batch[0].to(device)\n",
+    "        attention_mask = batch[1].to(device)\n",
+    "        labels = batch[2].to(device)\n",
     "        \n",
-    "#         outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
-    "#         loss = outputs.loss\n",
-    "#         train_losses += loss.item()\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        loss = outputs.loss\n",
+    "        train_losses += loss.item()\n",
     "        \n",
-    "#         # Modify the loss to include L2 reg\n",
-    "#         l2_reg = torch.tensor(0.).to(device)\n",
-    "#         for param in model.parameters():\n",
-    "#             l2_reg += torch.norm(param)\n",
-    "#         loss += weight_decay * l2_reg\n",
+    "        # Modify the loss to include L2 reg\n",
+    "        l2_reg = torch.tensor(0.).to(device)\n",
+    "        for param in model.parameters():\n",
+    "            l2_reg += torch.norm(param)\n",
+    "        loss += weight_decay * l2_reg\n",
     "        \n",
     "        \n",
-    "#         loss.backward()\n",
+    "        loss.backward()\n",
     "        \n",
-    "#         optimiser.step()\n",
-    "#         scheduler.step()\n",
-    "#         optimiser.zero_grad()\n",
+    "        optimiser.step()\n",
+    "        scheduler.step()\n",
+    "        optimiser.zero_grad()\n",
     "        \n",
-    "#     # Calculate training loss for the epoch\n",
-    "#     train_loss = train_losses / len(train_loader)\n",
+    "    # Calculate training loss for the epoch\n",
+    "    train_loss = train_losses / len(train_loader)\n",
     "    \n",
-    "#     model.eval()\n",
-    "#     valid_losses = 0.0\n",
-    "#     with torch.no_grad():\n",
-    "#         for batch in tqdm(val_loader, desc=f\"Validation Epoch {epoch+1}/{num_epochs}\", unit=\"batch\"):\n",
-    "#             input_ids = batch[0].to(device)\n",
-    "#             attention_mask = batch[1].to(device)\n",
-    "#             labels = batch[2].to(device)\n",
+    "    model.eval()\n",
+    "    valid_losses = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for batch in tqdm(val_loader, desc=f\"Validation Epoch {epoch+1}/{num_epochs}\", unit=\"batch\"):\n",
+    "            input_ids = batch[0].to(device)\n",
+    "            attention_mask = batch[1].to(device)\n",
+    "            labels = batch[2].to(device)\n",
     "            \n",
-    "#             outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
-    "#             valid_losses += outputs.loss.item()\n",
+    "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "            valid_losses += outputs.loss.item()\n",
     "    \n",
-    "#     # Calculate validation loss for the epoch\n",
-    "#     valid_loss = valid_losses / len(val_loader)\n",
+    "    # Calculate validation loss for the epoch\n",
+    "    valid_loss = valid_losses / len(val_loader)\n",
     "    \n",
-    "#     print(f\"Epoch {epoch+1}, Training Loss: {train_loss:.5f}, Validation Loss: {valid_loss:.5f}\")"
+    "    print(f\"Epoch {epoch+1}, Training Loss: {train_loss:.5f}, Validation Loss: {valid_loss:.5f}\")"
    ]
   },
   {
@@ -980,40 +980,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_dataset = torch.utils.data.TensorDataset(\n",
-    "#     torch.tensor(test_encodings['input_ids']),\n",
-    "#     torch.tensor(test_encodings['attention_mask']),\n",
-    "#     torch.tensor(test_labels)\n",
-    "# )\n",
-    "# test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "test_dataset = torch.utils.data.TensorDataset(\n",
+    "    torch.tensor(test_encodings['input_ids']),\n",
+    "    torch.tensor(test_encodings['attention_mask']),\n",
+    "    torch.tensor(test_labels)\n",
+    ")\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "# model.eval()\n",
-    "# predictions = []\n",
-    "# true_labels = []\n",
+    "model.eval()\n",
+    "predictions = []\n",
+    "true_labels = []\n",
     "\n",
-    "# with torch.no_grad():\n",
-    "#     for batch in tqdm(test_loader, desc=f\"Testing Epoch {epoch+1}/{num_epochs}\", unit=\"batch\"):\n",
-    "#         input_ids = batch[0].to(device)\n",
-    "#         attention_mask = batch[1].to(device)\n",
-    "#         labels = batch[2].to(device)\n",
+    "with torch.no_grad():\n",
+    "    for batch in tqdm(test_loader, desc=f\"Testing Epoch {epoch+1}/{num_epochs}\", unit=\"batch\"):\n",
+    "        input_ids = batch[0].to(device)\n",
+    "        attention_mask = batch[1].to(device)\n",
+    "        labels = batch[2].to(device)\n",
     "\n",
-    "#         outputs = model(input_ids, attention_mask=attention_mask)\n",
-    "#         _, preds = torch.max(outputs.logits, dim=1)\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "        _, preds = torch.max(outputs.logits, dim=1)\n",
     "\n",
-    "#         predictions.extend(preds.cpu().numpy())\n",
-    "#         true_labels.extend(labels.cpu().numpy())\n",
+    "        predictions.extend(preds.cpu().numpy())\n",
+    "        true_labels.extend(labels.cpu().numpy())\n",
     "\n",
-    "# from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
     "\n",
-    "# accuracy = accuracy_score(true_labels, predictions)\n",
-    "# f1 = f1_score(true_labels, predictions)\n",
-    "# precision = precision_score(true_labels, predictions)\n",
-    "# recall = recall_score(true_labels, predictions)\n",
+    "accuracy = accuracy_score(true_labels, predictions)\n",
+    "f1 = f1_score(true_labels, predictions)\n",
+    "precision = precision_score(true_labels, predictions)\n",
+    "recall = recall_score(true_labels, predictions)\n",
     "\n",
-    "# print(f\"Test Accuracy: {accuracy:.5f}\")\n",
-    "# print(f\"Test F1 Score: {f1:.5f}\")\n",
-    "# print(f\"Test Precision: {precision:.5f}\")\n",
-    "# print(f\"Test Recall: {recall:.5f}\")"
+    "print(f\"Test Accuracy: {accuracy:.5f}\")\n",
+    "print(f\"Test F1 Score: {f1:.5f}\")\n",
+    "print(f\"Test Precision: {precision:.5f}\")\n",
+    "print(f\"Test Recall: {recall:.5f}\")"
    ]
   },
   {
@@ -1021,13 +1021,6 @@
    "metadata": {},
    "source": [
     "# SAVE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Obviously overfitted smh"
    ]
   },
   {
